Bug 372547 - Unable to load some investments on KF5
Summary: Unable to load some investments on KF5
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: git (master)
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-16 16:33 UTC by allan
Modified: 2018-03-28 07:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2016-11-16 16:33:29 UTC
When the import file has been loaded, one needs to select the appropriate columns for the various fields.  However, some investment files do not have columns for the symbol and security name.  In these cases, instead one entered those details into edit boxes.

This is no longer possible as recently the edit boxes have been removed.  These need to be reinstated, please.
Comment 1 allan 2016-11-16 16:48:06 UTC
See Review Request 129003: Separate investment page item 6). 23 September.

6) removed name and security filter lineedits, because they aren't
essential/usefull to import,

These fields are essential should the input file (eg. Fidelity UK) not have columns for these fields.

I have only recently been able to try rev 4.100.
Comment 2 allan 2016-11-18 22:22:33 UTC
@ lukasz.wojnilowicz@gmail.com

Hi Łukasz/Anyone, Do you have any interest in resolving this issue?
I've had a first go at restoring the widgets that were removed and have had to reorganise some of the others, trying to keep together those logically related.

If you are still interested, I can add attachments here.  I've not had time/opportunity to look into revising the coding.
Allan
Comment 3 wojnilowicz 2016-12-25 14:38:17 UTC
Hi Allan,
As stated earlier, filter lineedits weren't essential to import so they were removed. If you used them to manually enter name and symbol of securities, then their name should be appropriate.
In current situation I suggest separate dialog for manually entering name and symbol of security which would pop up during transition to next wizard page in case name and symbol combobox would be empty. I don't need it right now and there is still workaround.
Cheers
Łukasz
Comment 4 allan 2016-12-25 18:20:25 UTC
(In reply to NSLW from comment #3)
> Hi Allan,
> As stated earlier, filter lineedits weren't essential to import so they were
> removed. If you used them to manually enter name and symbol of securities,
> then their name should be appropriate.

If your investment import files contain the security information in columns, then yes, the line edit for the security name is not needed, as you say.  However, that's not my situation.  In my case, the security name is on one of the several header rows, so it has to be entered manually.  Therefore it is essential to have the line edit restored.
> In current situation I suggest separate dialog for manually entering name
> and symbol of security which would pop up during transition to next wizard
> page in case name and symbol combobox would be empty. I don't need it right
> now and there is still workaround.
> Cheers
> Łukasz

I've reorganised the UI to accommodate this.  I tried having an additional row, but that made the appearance too dissimilar to the other wizard pages, so what I've done is move the comboboxes about to make room, while trying to keep associated fields close together.  I don't really like the idea of a supplementary window to catch 'forgotten bits.'
Comment 5 wojnilowicz 2017-02-17 20:34:56 UTC
Git commit 90e906fdadb22ec572c1e3f9324297943e5a930f by Łukasz Wojniłowicz.
Committed on 17/02/2017 at 20:15.
Pushed by wojnilowicz into branch 'master'.

Allow importing single security investment statements

Summary:
Reuse security dialog to get imported security information.

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

Reviewers: #kmymoney

Differential Revision: https://phabricator.kde.org/D4446

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

M  +57   -5    kmymoney/plugins/csvimport/investmentwizardpage.cpp
M  +6    -0    kmymoney/plugins/csvimport/investmentwizardpage.h

https://commits.kde.org/kmymoney/90e906fdadb22ec572c1e3f9324297943e5a930f