Allow importing single security investment statements

Summary:
Reuse security dialog to get imported security information.
BUG:372547

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

Reviewers: #kmymoney

Differential Revision: https://phabricator.kde.org/D4446

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>